Added score, font support and changed build file.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,6 @@
 cmake_minimum_required(VERSION 3.24)
+include(FindPkgConfig)
+pkg_check_modules(SDL2TTF REQUIRED SDL2_ttf)
 project(pac C)
 
 set(CMAKE_C_STANDARD 11)
@@ -13,8 +15,14 @@ include_directories(${SDL2_INCLUDE_DIRS})
 set(SOURCE_FILES main.c)
 
 # Create an executable
-add_executable(Pacman ${SOURCE_FILES})
+add_executable(pac ${SOURCE_FILES})
 
 # Link SDL2 to the project
-target_link_libraries(Pacman ${SDL2_LIBRARIES})
+target_link_libraries(pac ${SDL2_LIBRARIES})
+
+# Include SDL2_ttf headers
+include_directories(${SDL2TTF_INCLUDE_DIRS})
+
+# Link SDL2_ttf to the project
+target_link_libraries(pac ${SDL2TTF_LIBRARIES})
 
